--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 
 <h1>My name is raghavtiwari</h1>
-<p>i am learning how to use ansible</p>
+<p>ansible host ip {{ ansible_hostname }} </p>
 
 </body>
 </html>
