--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <body>
 
-<h1>My name is raghavtiwari</h1>
-<p>ansible host ip {{ ansible_hostname }} </p>
+<h1>My name is raghavtiwari welcome to my webpage</h1>
+ansible host ip {{ ansible_hostname }} 
 
 </body>
 </html>
