--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 
 <h1>My name is raghavtiwari welcome to my webpage</h1>
-ansible host ip {{ ansible_hostname }} 
+ ip-address {{ ansible_hostname }} 
 
 </body>
 </html>
